--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Kritik & Saran
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,5 +13,9 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <div id ="container">
+    Kritik : saya merasa agak berat ce kalau harus memahami materi yang diberi hari itu juga sekalian mengerjakan soal latihan yang harus dikumpulkan
+    hari itu juga <br><br>
+    Saran : Sebaiknya latihan nya jangan dikumpulkan hari itu juga ce, agar kita bisa lebih memahami dan fokus dengan materi yang diberikan cece pada hari itu dan bisa mengerjakan soal dengan maksimal
+  </div>
 </ion-content>
